# squeal

./: .bazelignore  .bazelrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  CHANGELOG.md  CLAUDE.md  Cargo.toml  ERGONOMICS_ANALYSIS.md  MODULE.bazel  README.md  bzsh  cargo-test-319821-2222048539384864868_0.profraw  cargo-test-319821-3611521165056300773_0.profraw  cargo-test-319821-5729738726718064669_0.profraw  cargo-test-319821-9379338856235649079_0.profraw  cargo-test-320085-6508033649641953529_0.profraw  cargo-test-320175-15596088337549212516_0.profraw  tarpaulin.toml
.buildbuddy/: latest_version_tag.sh  workplace-status.sh
.github/workflows/: rust.yml
benches/: benchmark.rs
docs/: CLIPPY_SETUP.md
src/: lib.rs
src/queries/: create_table.rs  delete.rs  drop_table.rs  insert.rs  mod.rs  select.rs  update.rs
tests/: integration_test.rs
