[package]
name = "squeal"
# Squeal is pre-release
version = "0.0.3"
edition = "2021"
description = "A SQL query builder library for Rust"
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://gitlab.com/upside-down-research/oss/squeal"
documentation = "https://docs.rs/squeal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false