[package]
name = "squeal"
# Squeal is pre-release
version = "0.0.5"
edition = "2021"
description = "A SQL query builder library for Rust"
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://gitlab.com/upside-down-research/oss/squeal"
documentation = "https://docs.rs/squeal"
authors= ["Upside Down Research"]
rust-version = "1.75.0"
categoried = ["database"]
[features]
postgres-docker = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.7"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
testcontainers = { version = "0.15" }
testcontainers-modules = { version = "0.2.1", features = ["postgres"] }
[[bench]]
name = "benchmark"
harness = false