[package]
name = "squeal"
# Squeal is pre-release
version = "0.1.1"
edition = "2024"
description = "A SQL query builder library for Rust"
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/upside-down-research/squeal"
documentation = "https://docs.rs/squeal"
authors= ["Upside Down Research"]
rust-version = "1.90"
categories = ["database"]

[features]
postgres-docker = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
postgres = "0.19.7"
criterion = { version = "0.4", features = ["html_reports"] }
testcontainers = { version = "0.15" }
testcontainers-modules = { version = "0.2.1", features = ["postgres"] }
[[bench]]
name = "benchmark"
harness = false